Thu Mar  9 15:52:14 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/main-window.c:
	  - Use the proper clipboards

Wed Mar  8 20:44:50 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/irc-network-editor.glade:
	  - Make the servers list view reorderable, to allow users to change
	    the the priority order.

Wed Mar  8 14:52:12 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	* src/fe-gnome/fe-gnome.c:
	  - Fill in extra nickname fields in the common prefs structure, so
	    that the fallbacks are predictable (#333659)

Wed Mar  8 14:26:51 MST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/preferences-page-dcc.c:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/gui.h:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-colors.h:
	* data/preferences-dialog.glade:
	  - A variety of improvements to the preferences dialog.  This fixes
	    some non-HIG spacing, ugliness from size groups, and modality.

Wed Mar  8 01:24:22 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Make the userlist popup xinerama-happy

Wed Mar  8 00:47:54 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	* plugins/notify-osd/notify-osd.c:
	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/channel-list.c:
	* src/fe-gnome/plugins.c:
	  - Fix a variety of warnings, ranging from 64-bit compatibility stuff
	    to not including <string.h> in the right places.

Wed Mar  8 00:34:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/topic-change.glade:
	  - Disallow tabs in the topic input box, which makes the box much
	    more usable with the keyboard.
	* src/fe-gnome/topic-label.c: